--- a/AntTrak.csproj
+++ b/AntTrak.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Helpers\AttachmentHelper.cs" />
     <Compile Include="Helpers\HistoriesDisplayHelper.cs" />
     <Compile Include="Helpers\HistoryHelper.cs" />
+    <Compile Include="Helpers\ImageUploadValidator.cs" />
     <Compile Include="Helpers\MessageHelper.cs" />
     <Compile Include="Helpers\NotificationHelper.cs" />
     <Compile Include="Helpers\ProjectHelper.cs" />
@@ -279,7 +280,6 @@
     <Content Include="Views\Account\ForgotPasswordOld.cshtml" />
     <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\RegisterOld.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\SendCode.cshtml" />
@@ -357,9 +357,8 @@
     <None Include="packages.config" />
     <Content Include="Scripts\adminlte.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
-    <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Home\DashboardAlternate.cshtml" />
-    <Content Include="Views\Admin\ManageRoles.cshtml" />
+    <Content Include="Views\Admin\ManageRolesAlternate.cshtml" />
     <Content Include="private.config" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Projects\ManageProjectUserAssignments.cshtml" />
@@ -378,6 +377,9 @@
     <None Include="Properties\PublishProfiles\AntTrak - Web Deploy.pubxml" />
     <Content Include="Views\Home\Dashboard.cshtml" />
     <Content Include="Views\Projects\ManageUserProjectAssignments.cshtml" />
+    <Content Include="Views\Account\DemoLogin.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Admin\ManageRoles.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
